k8s/overlays/test/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-app-ingress
spec:
  rules:
    - host: test.live-app.example.com
